--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,8 @@
-// a combination of
-// https://github.com/microsoft/vscode-dev-containers/blob/main/containers/rust/.devcontainer/devcontainer.json
-// https://github.com/microsoft/vscode-dev-containers/blob/main/containers/r/.devcontainer/devcontainer.json
+// see: https://rocker-project.org/images/devcontainer/features.html
 
 {
-	"name": "Rust",
-	"build": {
-		"dockerfile": "Dockerfile"
-  }
+    "image": "mcr.microsoft.com/devcontainers/universal:2",
+    "features": {
+        "ghcr.io/rocker-org/devcontainer-features/r-apt:latest": {}
+    }
 }
