--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 "features": {
     "ghcr.io/rocker-org/devcontainer-features/r-apt:0": {"devtools": true, "installBspm": true},
-    "ghcr.io/devcontainers/features/rust:1": {}
-    // "ghcr.io/devcontainers/features/sshd:1": {} 
+    "ghcr.io/devcontainers/features/rust:1": {},
+    "ghcr.io/devcontainers/features/sshd:1": {} 
 }
 }
