--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
 "features": {
     "ghcr.io/rocker-org/devcontainer-features/r-apt:0": {"devtools": true, "installBspm": true},
     "ghcr.io/devcontainers/features/rust:1": {},
-    "ghcr.io/devcontainers/features/sshd:1": {} 
+    "ghcr.io/devcontainers/features/sshd:1": {},
+    "ghcr.io/devcontainers-contrib/features/tmux-apt-get:1": {}
 }
 }
