--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,5 +15,5 @@
     "ghcr.io/devcontainers/features/rust:1": {},
     "ghcr.io/devcontainers/features/sshd:1": {}
 },
-    "postCreateCommand": "rustc --version"
+    "postCreateCommand": "R -q -e 'remotes::install_deps(dependencies=TRUE, build=FALSE)'"
 }
